<resources>
    <string name="app_name">SuiteCRMApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SuiteCRM</string>
    <string name="nav_header_subtitle">Android APP for SuiteCRM from Sidorkin Alex</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_settings_app">Settings App</string>
    <string name="settings_url">URL SuiteCRM</string>
    <string name="login_crm">Login</string>
    <string name="pass_crm">Password</string>
    <string name="settings_autologin">automatic login</string>
    <string name="settings_button_save">Save</string>
    <string name="settings_button_test">Test settings</string>
</resources>