<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.settings.SettingsMainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="top"
                android:text="@string/settings_url" />

            <EditText
                android:id="@+id/url_root"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="top"
                android:text="@string/login_crm" />

            <EditText
                android:id="@+id/login_crm"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="top"
                android:text="@string/pass_crm" />

            <EditText
                android:id="@+id/pass_crm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textWebPassword" />
        </LinearLayout>
        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal"-->
        <!--            tools:ignore="UselessParent">-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginRight="10dp"-->
        <!--                android:gravity="top"-->
        <!--                android:text="@string/settings_autologin" />-->

        <!--            <CheckBox-->
        <!--                android:id="@+id/auto_login"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="30dp"-->
        <!--                android:layout_margin="10dp" />-->
        <!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_save" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/settings_button_test" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>